	  as happens on the original. Arrest schedule is considered to be combat for
	  determining if the NPC is hostile. Guards are of chaotic alignment as they
	  are in the original.
	* actors.cc: Arrest schedule does not seek foes. Local guards call for more
	  guards. All together, this fixes bug #3599723 "guards that were called by
	  npcs stop attacking on reload".

2013-01-19	Malignant Manor <malignantmanor@users.sourceforge.net>
	* shape_info.txt: Fix typos that caused books to run the wrong usecode. This
	  fixes bug #3601322 Exploding books in Castle of White dragon don't explode

2013-01-19	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* schedule.cc: Fixing bug #3601456 "NPCs teleport out of bed when woken up".
	  Reduced random delay for Walk_to_schedule as it caused NPCs to stand still
	  for far too long in many cases.
	* actors.*: On schedule restore, party_id hasn't been set for party members
	  yet, so use Actor::is_in_party instead. Also, allow moving to schedule if
	  NPC is sufficiently far away from schedule center on restore. This could
	  cause (say) NPCs to sleep on the wrong bed.
	* gamewin.cc: Fixed bug #3601457 "asleep and paralyzed npcs should not call
	  guards".
	Rev 7304
	* effects.cc: Fixed incorrect checking of prjectile hits, which caused a bow
	  to miss at point blank range sometimes (and likely in other occasions).
	Rev 7305
	* all: Alignment and charm now works like the original: the charmed creature
	  gets the alignment of the person that charmed him (or chaotic if an object
	  did it). Usecode gets/sets charmed alignment if the NPC is not charmed, or
	  the real alignment otherwise. Setting charm flag from usecode sets charmed
	  alignment to good, as in the originals. The charmed alignment is saved and
	  restored. Actor::fight_back should use effective alignment for its tests.
	  Several locations that got the real alignment use the effective alignment
	  now. Chat screen displays alignment (real and effective).
	Rev 7306